wrap NewReview component in reduxForm to make sure new form gets emptied

--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -100,3 +100,10 @@ table a i {
   align-items: center;
   justify-content: center;
 }
+
+
+// relocate
+
+th{
+  min-width: 50px;
+}
